--- a/client/src/app/components/lista-peliculas/lista-peliculas.component.html
+++ b/client/src/app/components/lista-peliculas/lista-peliculas.component.html
@@ -2,10 +2,14 @@
     <div class="col-md-4">
       <div *ngFor="let fac of variable">
       <div class="card-header align-items-center">
-        <p>Pelicula 1</p>
+        <h4>{{fac.titulo}}</h4>
+        <button class="btn btn-danger" (click)="delete(fac.id)">
+          <i class="far fa-trash-alt"></i>
+        </button>
       </div>
       <div class="card-body">
-        <h1>Esta es la pelicula #1</h1>
+        <img src="{{fac.imagen}}" class="card-img-top"/>
+        <p>{{fac.descripcion}}</p>
       </div>
     </div>
   </div>
